--- a/.github/workflows/security-gate.yml
+++ b/.github/workflows/security-gate.yml
@@ -38,15 +38,13 @@ jobs:
           pip-audit -f json -o pip-audit.json || true
 
       # ---------- Gitleaks (Secrets) ----------
-      - name: Install Gitleaks
-        run: |
-          wget -q https://github.com/gitleaks/gitleaks/releases/download/v8.24.3/gitleaks_8.24.3_linux_x64.tar.gz
-          tar -xzf gitleaks_8.24.3_linux_x64.tar.gz
-          sudo mv gitleaks /usr/local/bin/
-          
       - name: Run Gitleaks (Secrets)
         run: |
-          gitleaks detect --source . --report-format json --report-path gitleaks.json || true
+          docker run --rm -v "$PWD:/path" zricethezav/gitleaks:latest detect \
+            --source /path \
+            --report-format json \
+            --report-path /path/gitleaks.json \
+            --no-git || true
 
       # ---------- Gate (Policy Enforcement) ----------
       - name: Enforce Security Gate
