--- a/.github/workflows/security-gate.yml
+++ b/.github/workflows/security-gate.yml
@@ -39,11 +39,12 @@ jobs:
 
       # ---------- Gitleaks (Secrets) ----------
       - name: Run Gitleaks (Secrets)
-        uses: gitleaks/gitleaks-action@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          config-path: .gitleaks.toml
+        run: |
+          docker run --rm -v "$PWD:/path" zricethezav/gitleaks:latest detect \
+            --source /path \
+            --report-format json \
+            --report-path /path/gitleaks.json \
+            --no-git || true
 
       # ---------- Gate (Policy Enforcement) ----------
       - name: Enforce Security Gate
